--- a/pictures/src/main/java/com/ulrich/MainFrame.form
+++ b/pictures/src/main/java/com/ulrich/MainFrame.form
@@ -3,9 +3,6 @@
   <splitpane id="14624" binding="mainPanel">
     <constraints>
       <xy x="162" y="17" width="1130" height="795"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3">
-        <preferred-size width="200" height="200"/>
-      </grid>
     </constraints>
     <properties>
       <continuousLayout value="false"/>
@@ -16,7 +13,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="13a2c" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="13a2c" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <splitpane position="left"/>
@@ -24,10 +21,33 @@
         <properties/>
         <border type="none"/>
         <children>
+          <grid id="29213" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="0" height="-1"/>
+                <preferred-size width="300" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+            <border type="none" title="Beschreibung"/>
+            <children>
+              <component id="32114" class="javax.swing.JTextArea" binding="description">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="0" height="150"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <lineWrap value="true"/>
+                  <wrapStyleWord value="true"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
           <scrollpane id="9809d">
             <constraints>
-              <xy x="0" y="0" width="300" height="385"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="0" height="150"/>
               </grid>
             </constraints>
@@ -40,35 +60,9 @@
               </component>
             </children>
           </scrollpane>
-          <grid id="29213" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <xy x="0" y="390" width="300" height="405"/>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3">
-                <minimum-size width="0" height="-1"/>
-                <preferred-size width="300" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-            <border type="none" title="Beschreibung"/>
-            <children>
-              <component id="32114" class="javax.swing.JTextArea" binding="description">
-                <constraints>
-                  <xy x="5" y="20" width="290" height="380"/>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3">
-                    <minimum-size width="0" height="150"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <lineWrap value="true"/>
-                  <wrapStyleWord value="true"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
         </children>
       </grid>
-      <grid id="5c490" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="5c490" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <splitpane position="right"/>
@@ -76,19 +70,17 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="75963" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="75963" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <xy x="0" y="0" width="820" height="765"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none" title="Titel und Bild"/>
             <children>
               <component id="e69b4" class="javax.swing.JTextField" binding="title">
                 <constraints>
-                  <xy x="5" y="20" width="810" height="22"/>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1">
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="800" height="-1"/>
                   </grid>
                 </constraints>
@@ -97,11 +89,10 @@
                   <text value=""/>
                 </properties>
               </component>
-              <xy id="28328" binding="imagePanel" hgap="-1" vgap="-1">
+              <xy id="28328" binding="imagePanel" layout-manager="XYLayout" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <xy x="5" y="47" width="810" height="713"/>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3">
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <minimum-size width="800" height="600"/>
                     <preferred-size width="800" height="600"/>
                   </grid>
@@ -112,19 +103,17 @@
               </xy>
             </children>
           </grid>
-          <grid id="3df29" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3df29" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <xy x="0" y="770" width="820" height="25"/>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
               <component id="6233a" class="javax.swing.JButton" binding="delete">
                 <constraints>
-                  <xy x="380" y="0" width="80" height="25"/>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Löschen"/>
